# scratch-io

./: .gitattributes  Cargo.toml  LICENSE-THIRD-PARTY.html  README.md  about.toml
.github/workflows/: build.yml  ci.yml  lint.yml  tests.yml
docs/api/: api.md  authentication.md
docs/wharf/: patch.md  signature.md  wharf.md
docs/wharf/file_formats/: patch.md  signature.md
scratch-io/: Cargo.toml
scratch-io-cli/: Cargo.toml
scratch-io-cli/src/: api.rs  config.rs  main.rs  session.rs  wharf.rs
scratch-io/src/: errors.rs  extract.rs  filesystem.rs  game_files.rs  heuristics.rs  itch_api.rs  itch_manifest.rs  lib.rs  wharf.rs
scratch-io/src/itch_api/: endpoints.rs  errors.rs  login.rs  oauth.rs  responses.rs  types.rs
scratch-io/src/itch_api/oauth/: code_verifier.rs  uuid.rs
scratch-io/src/wharf/: bsdiff.rs  common.rs  patch.rs  protobuf.rs  signature.rs  tlc.rs
src/: config.rs  error.rs  errors.rs  extract.rs  filesystem.rs  game_files.rs  game_files_operations.rs  heuristics.rs  itch_api.rs  itch_api_calls.rs  itch_api_types.rs  itch_manifest.rs  itch_types.rs  lib.rs  main.rs  network.rs  serde_rules.rs  wharf.rs
src/itch_api/: download.rs  errors.rs  responses.rs  types.rs
src/wharf/: bsdiff.rs  pwr.rs  tlc.proto  tlc.rs
wharf/: Cargo.toml
wharf/src/: common.rs  container.rs  hasher.rs  info.rs  lib.rs  patch.rs  pool.rs  protos.rs  repair.rs  signature.rs  verify.rs
wharf/src/hasher/: block_buffer.rs  buffer_pool.rs  errors.rs  internal_hasher.rs  verification_status.rs  writer.rs
wharf/src/hasher/buffer_pool/: header.rs  slot.rs
wharf/src/patch/: apply.rs  operations.rs  read.rs
wharf/src/patch/apply/: bsdiff.rs  rsync.rs  staging.rs
wharf/src/patch/operations/: apply.rs  bsdiff.rs  rsync.rs  skip.rs
wharf/src/pool/: container.rs  errors.rs  null.rs  staging.rs  zip.rs
wharf/src/protos/: bsdiff.proto  definitions.rs  pwr.proto  pwr.rs  tlc.proto  tlc.rs
wharf/src/protos/definitions/: pwr.rs
wharf/src/signature/: read.rs  repair.rs  verify.rs
wharf2/: Cargo.toml
wharf2/src/: binaries.rs  container.rs  decompress.rs  errors.rs  identify.rs  lib.rs  magic.rs  protos.rs
wharf2/src/binaries/: signature.rs
wharf2/src/protos/: bsdiff.rs  definitions.rs  pwr.rs
wharf2/src/protos/definitions/: pwr.rs  tlc.rs
