[package]
name = "scratch-io"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
confy = "1.0.0"
dirs = "6.0.0"
futures-util = "0.3.31"
indicatif = "0.18.0"
md-5 = "0.10.6"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shell-words = "1.1.0"
strsim = "0.11.1"
time = { version = "0.3.43", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "process", "rt-multi-thread"] }

zip = { version = "4.6.1", optional = true }
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.2", optional = true }
bzip2 = { version = "0.6.0", optional = true }
liblzma = { version = "0.4.4", optional = true }
zstd = { version = "0.13.3", optional = true }

[features]
default = ["zip", "tar", "gzip", "bzip2", "xz", "zstd"]
zip = ["dep:zip"]
tar = ["dep:tar"]
gzip = ["dep:flate2", "tar"]
bzip2 = ["dep:bzip2", "tar"]
xz = ["dep:liblzma", "tar"]
zstd = ["dep:zstd", "tar"]
