[package]
name = "scratch-io"
description = "A command-line tool for managing, downloading, and launching games from itch.io"
repository = "https://github.com/Vidi0/scratch-io"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
directories = "6.0.0"
futures-util = "0.3.31"
indicatif = "0.18.0"
md-5 = "0.10.6"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "http2", "stream", "system-proxy", "charset"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.0"
shell-words = "1.1.0"
strsim = "0.11.1"
time = { version = "0.3.43", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.9.6"

zip = { version = "5.1.1", optional = true }
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.2", optional = true }
bzip2 = { version = "0.6.0", optional = true }
liblzma = { version = "0.4.4", optional = true }
zstd = { version = "0.13.3", optional = true }

[features]
default = ["zip", "tar", "gzip", "bzip2", "xz", "zstd"]
zip = ["dep:zip"]
tar = ["dep:tar"]
gzip = ["dep:flate2", "tar"]
bzip2 = ["dep:bzip2", "tar"]
xz = ["dep:liblzma", "tar"]
zstd = ["dep:zstd", "tar"]
