[package]
name = "scratch-io"
description = "A command-line tool for managing, downloading, and launching games from itch.io"
repository = "https://github.com/Vidi0/scratch-io"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
directories = "6.0.0"
futures-util = "0.3.31"
indicatif = "0.18.2"
md-5 = "0.10.6"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2", "stream", "system-proxy", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
shell-words = "1.1.0"
strsim = "0.11.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.9.8"

zip = { version = "6.0.0", optional = true }
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.5", optional = true }
bzip2 = { version = "0.6.1", optional = true }
liblzma = { version = "0.4.5", optional = true }
zstd = { version = "0.13.3", optional = true }
prost = "0.14.1"

[features]
default = ["zip", "tar", "gzip", "bzip2", "xz", "zstd"]
zip = ["dep:zip"]
tar = ["dep:tar"]
gzip = ["dep:flate2", "tar"]
bzip2 = ["dep:bzip2", "tar"]
xz = ["dep:liblzma", "tar"]
zstd = ["dep:zstd", "tar"]
