[package]
name = "scratch-io-cli"
description = "A command-line tool for managing, downloading, and launching games from itch.io"
repository = "https://github.com/Vidi0/scratch-io"
license = "GPL-3.0-or-later"
readme = "../README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
scratch-io = { version = "0.1.4", path = "../scratch-io" }
wharf = { version = "0.1.0", path = "../wharf" }

clap = { version = "4.5.54", features = ["derive", "env"] }
directories = "6.0.0"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
shell-words = "1.1.1"
toml = "0.9.11"
rc-zip-sync = "4.4.2"
