[package]
name = "scratch-io"
description = "A rust library for managing, downloading, and launching games from itch.io"
repository = "https://github.com/Vidi0/scratch-io"
license = "GPL-3.0-or-later"
readme = "../README.md"
version = "0.1.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
directories = "6.0.0"
futures-util = "0.3.31"
md-5 = "0.10.6"
prost = "0.14.1"
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "http2", "stream", "system-proxy", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
strsim = "0.11.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = "0.9.10"
lru = "0.16.2"

zip = { version = "7.0.0", optional = true }
brotli = { version = "8.0.2", optional = true }
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.5", optional = true }
bzip2 = { version = "0.6.1", optional = true }
liblzma = { version = "0.4.5", optional = true }
zstd = { version = "0.13.3", optional = true }

[features]
default = ["zip", "wharf", "tar"]

zip = ["dep:zip"]
tar = ["dep:tar"]
brotli = ["dep:brotli"]
gzip = ["dep:flate2"]
bzip2 = ["dep:bzip2"]
xz = ["dep:liblzma"]
zstd = ["dep:zstd"]

# Wharf is the protocol used by itch.io to handle patches and signatures
# This is a meta-feature that enables all compression formats supported by the protocol
wharf = ["brotli", "gzip", "zstd"]
