[package]
name = "scratch-io"
description = "A rust library for managing, downloading, and launching games from itch.io"
repository = "https://github.com/Vidi0/scratch-io"
license = "GPL-3.0-or-later"
readme = "../README.md"
version = "0.1.4"
edition = "2024"

[dependencies]
md-5 = "0.10.6"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "form", "http2", "query", "rustls-no-provider", "system-proxy"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "logging"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
strsim = "0.11.1"
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["formatting", "parsing", "serde"] }
toml = "0.9.11"

zip = { version = "7.2.0", optional = true }
brotli = { version = "8.0.2", optional = true }
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.8", optional = true }
bzip2 = { version = "0.6.1", optional = true }
liblzma = { version = "0.4.5", optional = true }
zstd = { version = "0.13.3", optional = true }

[features]
default = ["zip", "tar", "gzip", "zstd"]

zip = ["dep:zip"]
tar = ["dep:tar"]
brotli = ["dep:brotli"]
gzip = ["dep:flate2"]
bzip2 = ["dep:bzip2"]
xz = ["dep:liblzma"]
zstd = ["dep:zstd"]
