[package]
name = "wharf2"
description = "A reimplementation of the wharf protocol client for updating and verifying games"
repository = "https://github.com/Vidi0/scratch-io"
license = "GPL-3.0-or-later"
readme = "../README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
thiserror = "2.0.18"

# Compression formats
brotli = "8.0.2"
flate2 = "1.1.9"
zstd = "0.13.3"
